--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
   "C_Cpp.errorSquiggles": "Disabled",
-  "C_Cpp_Runner.cCompilerPath": "C:\\msys64\\mingw64\\bin\\gcc.exe",
-  "C_Cpp_Runner.cppCompilerPath": "C:\\msys64\\mingw64\\bin\\g++.exe",
-  "C_Cpp_Runner.debuggerPath": "C:\\msys64\\mingw64\\bin\\gdb.exe",
-  "C_Cpp_Runner.makePath": "C:\\msys64\\mingw64\\bin\\make.exe",
+  "C_Cpp_Runner.cCompilerPath": "C:\\MinGW\\bin\\gcc.exe",
+  "C_Cpp_Runner.cppCompilerPath": "C:\\MinGW\\bin\\g++.exe",
+  "C_Cpp_Runner.debuggerPath": "C:\\MinGW\\bin\\gdb.exe",
+  "C_Cpp_Runner.makePath": "C:\\MinGW\\bin\\make.exe",
   "C_Cpp_Runner.warnings": [
     "-Wall",
     "-Wextra",
