--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,13 @@
       "name": "C/C++ Runner: Debug Session",
       "type": "cppdbg",
       "request": "launch",
-      "args": [],
+      "args": [
+        ""
+      ],
       "stopAtEntry": false,
-      "cwd": "c:\\Users\\clara\\Projetos\\SIG-Recipes",
+      "cwd": "c:/Users/clara/Projetos/SIG-Recipes",
       "environment": [],
-      "program": "c:\\Users\\clara\\Projetos\\SIG-Recipes\\build\\Debug\\outDebug",
+      "program": "c:/Users/clara/Projetos/SIG-Recipes/build/Debug/outDebug",
       "internalConsoleOptions": "openOnSessionStart",
       "MIMode": "gdb",
       "miDebuggerPath": "C:/MinGW/bin/gdb.exe",
